--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.8",
     "typescript": "~5.0.4",
+    "unplugin-vue-components": "^0.27.0",
     "vite": "^4.3.5",
     "vitest": "^0.31.0",
     "vue-tsc": "^1.6.4"
