--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "jsdom": "^22.0.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.8",
+    "sass": "^1.77.1",
     "typescript": "~5.0.4",
     "unplugin-vue-components": "^0.27.0",
     "vite": "^4.3.5",
