--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "prettier": "^2.8.8",
     "sass": "^1.77.1",
     "typescript": "~5.0.4",
+    "unplugin-auto-import": "^0.17.6",
     "unplugin-vue-components": "^0.27.0",
     "vite": "^4.3.5",
     "vitest": "^0.31.0",
