--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@vueuse/core": "^10.9.0",
     "pinia": "^2.0.36",
     "vue": "^3.4.27",
     "vue-router": "^4.2.0"
